Changed News Head

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-common">
             <img src="assets/img/portfolio/news-head.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Sachin Siyam P</h4>
+              <h4>Tamil Arasu S</h4>
               <p>Newsletter Head</p>
               <a href="assets/img/portfolio/news-head.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               
