Removed Blog Images

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>GCES Coderz | Home</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="As a part of the GCES, we aim to provide a gateway for the fellow students in our club to join the Tech community. We create a platform which allows students to gain assistance and mentorship to enhance their technical ability. We believe that every student here at GCES should have an opportunity to learn practical technical experience and develop a passion for technology. The secret of getting ahead is getting started and we aim to provide every student with the right start." name="description">
+  <meta content="GCES Coderz,Government College of Engineering Srirangam, gcescoderz" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/me.png" rel="icon">
@@ -347,6 +347,9 @@
       <div class="container">
         <div class="section-title text-center">
           <h2>Latest Blogs</h2>
+          <a href="https://gcescoderz.hashnode.dev/">
+            <p>View All</p>
+          </a>
         </div>
       </div>
 
