--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
+  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/91d6ae70e3cac2c0d58cd86ab/5db4bbcacf2155ef3a75a7615.js");</script>
 </head>
 
 <body>
